Added year dropdown to fantasy teams Updated games to use Firebase Updated players to use Firebase Updated players to include goalie stats Added new services and new interfaces Added standings to Teams pages

--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,10 @@
             "prerender": true,
             "ssr": {
               "entry": "server.ts"
-            }
+            },
+            "allowedCommonJsDependencies": [
+              "@grpc/proto-loader"
+            ]
           },
           "configurations": {
             "production": {
